Ms update wallet test (#115)
* added windows specific options to the pom

* MS: Created a WIP launcher using update4j

* MS: Made a launcher service in janus

* MS: providing the service to update4j

* MS: Added a way for the launcher to start the wallet

* MS: Added update4j as dependency

* MS: Started work on update check in the wallet

* MS: fixed conflicts

* MS: started work on thread for restart of application

* MS: added a class for github jason. app restart on update detected. download new bootstrap when a new version exist

* misc

* MS: checkstyle cleanup

* misc

* MS: started adding a tray icon

* MS: inital setup of UpdateWallet test

* MS: Added test for updateWallet